shmuel 2025-11-23 09:53:48+02:00 - build 907

1. LuaFAR: use global tostring in far.Show and far.Message (as it was originally).

shmuel 2025-11-22 22:24:00+02:00 - build 906

1. LuaFAR: fix a problem with mf.acall (forum.farmanager.com/viewtopic.php?p=181675).

shmuel 2025-11-18 21:30:58+02:00 - build 905

1. LuaFAR: add method 'write' to user control.

shmuel 2025-11-13 20:17:29+02:00 - build 904

1. Adapt to the change in binary string representation made in build 898.

shmuel 2025-11-09 08:37:33+02:00 - build 903

1. Fix incorrect error message (since build 881).

shmuel 2025-11-07 08:50:00+02:00 - build 902

1. Enable mf.usermenu for Far started with -e or -v.
   - It was disabled due to crashes (see Mantis 0002986)
     but that seems to have changed since Far 3.0.5190.
   - See also: build 508 in this changelog.

shmuel 2025-11-06 23:58:14+02:00 - build 901

1. LuaFAR: make far.MkLink match docs.

shmuel 2025-11-02 12:35:31+02:00 - build 900

1. Make possible invoking macro browser via Plugin.Call(guid,"browser").

shmuel 2025-10-26 16:31:48+02:00 - build 899

1. LuaFAR: refactoring.

shmuel 2025-10-25 17:10:58+03:00 - build 898

1. LuaFAR: Add more stack operations to Macro-API engine.

shmuel 2025-10-24 20:23:49+03:00 - build 897

1. LuaFAR: add a few stack operations to Macro-API engine.

zg 2025-09-28 23:12:02+03:00 - build 896

1. Menu.GetItemExtendedData now has 1st optional parameter: dialog handle.

shmuel 2025-09-28 15:08:34+03:00 - build 895

1. LuaFAR: refactoring.

shmuel 2025-09-28 10:56:35+03:00 - build 894

1. LuaFAR: refactoring.

rohitab 2025-09-27 13:33:20+10:00 - build 893

1. gh-611: Enable win.GetFileTimes/win.SetFileTimes to get/set change time.

shmuel 2025-09-26 10:38:38+03:00 - build 892

1. LuaFAR: rename actl.Waitkey to actl.WaitKey

MZK 2025-09-11 21:46:54-04:00 - build 891

1. gh-948: Macro API to retrieve menu item extended data: Menu.GetItemExtendedData.

shmuel 2025-09-06 09:05:47+03:00 - build 890
